Added MyProfile and MyComments. Updated Controller classes. Updated form.html. Updated Login, Register controllers.