@@ -1,6 +1,5 @@
 package com.webprojectSEA.WebBlogProject.Services.UserServices;
 
-import com.webprojectSEA.WebBlogProject.Services.UserServices.UserAccountDetails;
 import com.webprojectSEA.WebBlogProject.model.Roles;
 import com.webprojectSEA.WebBlogProject.model.UserAccount;
 import lombok.Getter;
@@ -8,8 +7,8 @@ import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class UserAccountDetailsImpl implements UserAccountDetails {
 
@@ -18,11 +17,12 @@ public class UserAccountDetailsImpl implements UserAccountDetails {
     private UserAccount userAccount;
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        Roles roles = userAccount.getRole();
+        List<Roles> roles = userAccount.getRoles();
 
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(roles.getAuthorityRoles());
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(roles.toString());
 
-        return Arrays.asList(authority);
+
+        return List.of(authority);
     }
 
     @Override
